--- a/JPAReady/src/main/resources/application.properties
+++ b/JPAReady/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port = 8082
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/schooldb
 spring.datasource.username=root
-spring.datasource.password=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
+spring.datasource.password=hidden
 spring.database.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql:true
